--- a/index.html
+++ b/index.html
@@ -6,9 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Lista de chamada</h1>
-    <p>João Felipe</p>
+<nav></nav>
+        <header>
+            <div class="text">
+                <h1>Notify</h1>
+                <p>A great new free psd theme to showcase your new application</p>
+            </div>
+            <div class="cell">
+
+            </div>
+        </header>
+            <section class="cont1">
+
+            </section>
+            <section class="cont2">
+
+            </section>
+            <section class="cont3">
+
+            </section>
+                <footer>
+
+                </footer>
 </body>
 </html>
